class GameController:

    # Welcome message

    ## Loop

    # Print dummy board

    # Show score

    # Ask Player 1 for move

    # Dummy check

    # Perform move

    # Check if winner

    # Change player