@startuml Wordle

package Model <<rectangle>>{
    class WordleGame{
        -n_letters
        -n_guesses
        -word_list
        +select_target_word()
        +check_guess(user_word)
        +is_terminated(user_word, curr_guesses)
    }
    class WordList{
        -words
        +read_words_from_file(words_file_path)
        +select_random_word()
        +has_word(word)
    }
    enum LetterType{
        CORRECT_PLACE
        CORRECT_LETTER
        INCORRECT_LETTER
    }
}
package View <<rectangle>>{
    abstract class GameView{
        -n_letters
        +display_welcome_message()
        +get_user_word()
        +display_match(user_word, match)
        +display_game_over(word_found)
    }
    class GameConsoleView{
        -n_letters
        +display_welcome_message()
        +get_user_word()
        +display_match(user_word, match)
        +display_game_over(word_found, target_word)
    }
}
package Controller <<rectangle>>{
    class GameController{
        -model
        -view
        +run_game()
    }
}

WordleGame "1" *-- "1" WordList : contains >
WordleGame <... LetterType : uses >
GameView <-- GameConsoleView : < is a
GameConsoleView <.. LetterType : uses >
GameController "1" *-- "1" GameView : contains >
GameController "1" *-- "1" WordleGame : contains >